--- a/src/components/navbarPc/NavbarPc.css
+++ b/src/components/navbarPc/NavbarPc.css
@@ -74,8 +74,7 @@
     nav {
         flex-direction: column;
         align-items: flex-start;
-        width: 100%;
-        top: auto;
+      
         /* navbar bottom*/
         /* position: fixed;
         top: auto;
@@ -85,11 +84,11 @@
     }
   
     nav ul {
-        display: none;
-        flex-direction: column;
+      display: inline;
+        /* display: none;
+        flex-direction: column; */
         width: 100%;
-        /* margin-bottom: 0.25rem; */
-        margin: 0;
+        margin-bottom: 0.25rem;
     }
   
     nav ul.open {
