--- a/src/components/navbarPc/NavbarPc.css
+++ b/src/components/navbarPc/NavbarPc.css
@@ -72,8 +72,8 @@
     }
   
     nav {
-        flex-direction: column;
-        align-items: flex-start;
+        /* flex-direction: column;
+        align-items: flex-start; */
       
         /* navbar bottom*/
         /* position: fixed;
@@ -84,7 +84,7 @@
     }
   
     nav ul {
-      display: inline;
+      display: flex;
         /* display: none;
         flex-direction: column; */
         width: 100%;
