modif navbar pc

--- a/src/components/navbarPc/NavbarPc.css
+++ b/src/components/navbarPc/NavbarPc.css
@@ -5,8 +5,10 @@
     background-image: url("../../assets/images/header.png");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    /* background-size: cover; */
+    background-size: 100%;
     height: 100vh;
+    /* bottom: 10px; */
   }
   .app-navP {
     display: flex;
@@ -30,11 +32,46 @@
     display: flex;
   }
   
+  .app-navP .ul-groupe2 {
+    display: flex;
+  }
+
+  .app-navP .ul-groupe3 {
+    display: flex;
+  }
+
+
   .app-navP .app-ulP .app-liP {
    list-style: none; 
   }
+
+  .app-navP .ul-groupe2 .app-liP {
+    list-style: none; 
+   }
+
+   .app-navP .ul-groupe3 .app-liP {
+    list-style: none; 
+   }
   
   .app-navP .app-ulP .app-liP a {
+    display: block;
+    text-decoration: none;
+    color: white;
+    padding: 0.5rem;
+    margin: 0 0.5rem;
+    border-radius: 0.5rem;
+  }
+
+  .app-navP .ul-groupe2 .app-liP a {
+    display: block;
+    text-decoration: none;
+    color: white;
+    padding: 0.5rem;
+    margin: 0 0.5rem;
+    border-radius: 0.5rem;
+  }
+
+  .app-navP .ul-groupe3 .app-liP a {
     display: block;
     text-decoration: none;
     color: white;
@@ -109,8 +146,5 @@
 
   
   .App-headerP img{
-    height :70px
-  }
-
-/* je gere la partie mobile ici */
-  
+    height :50px
+  }  
